# fractals

./: .gitignore  CMakeLists.txt  README.md
cmake/platform/: apple.cmake  windows.cmake
src/: CMakeLists.txt  main.cpp
